keystone/keystone/templates/ingress-api.yaml
---
# Source: keystone/templates/ingress-api.yaml

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keystone
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    
spec:
  rules:
    - host: keystone
      http:
        paths:
          - path: /
            backend:
              serviceName: keystone-api
              servicePort: ks-pub
    - host: keystone.openstack
      http:
        paths:
          - path: /
            backend:
              serviceName: keystone-api
              servicePort: ks-pub
    - host: keystone.openstack.svc.cluster.local
      http:
        paths:
          - path: /
            backend:
              serviceName: keystone-api
              servicePort: ks-pub
